trying even though it fails tests

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,23 +7,20 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "# from gpt3_examples_1.core import *"
+    "from gpt3_examples.core import *\n",
+    "from nbdev.showdoc import *\n",
+    "import openai\n",
+    "from api_secrets import API_KEY\n",
+    "openai.api_key = API_KEY"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# gpt3-examples-1\n",
+    "# Quickstart with GPT3\n",
     "\n",
-    "> Examples of using GPT3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This file will become your README and also the index of your documentation."
+    "> connect with gpt3 and try out some things.  This notebook was created by following the great ML Tutorials [videos](https://youtu.be/Zb5Nylziu6E)"
    ]
   },
   {
@@ -38,7 +35,7 @@
    "metadata": {},
    "source": [
     "```sh\n",
-    "pip install gpt3_examples_1\n",
+    "pip install gpt3_examples\n",
     "```"
    ]
   },
@@ -53,7 +50,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
+    "Import the functions and use them to play with GPT-3 models.  Make sure you create your own API keys by signing up in OpenAI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example\n",
+    "> Lets ask GPT3 to create some text for us!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    -First we write a prompt to send to the model\n",
+    "    -Then the model creates text for us based on the prompt"
    ]
   },
   {
@@ -62,18 +75,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " bubbly, festive, and always up for a good time.\n"
+     ]
     }
    ],
    "source": [
-    "1+1"
+    "prompt = 'Whats a good tagline for champaign'\n",
+    "\n",
+    "text_response = ask_gpt3(prompt)\n",
+    "print(text_response)"
    ]
   },
   {
