keep api key there

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -10,8 +10,7 @@
     "from gpt3_examples.core import *\n",
     "from nbdev.showdoc import *\n",
     "import openai\n",
-    "from api_secrets import API_KEY\n",
-    "openai.api_key = API_KEY"
+    "openai.api_key = \"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\""
    ]
   },
   {
@@ -78,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " bubbly, festive, and always up for a good time.\n"
+      "Taste the feeling\n"
      ]
     }
    ],
