--- a/nbs/00_examples.ipynb
+++ b/nbs/00_examples.ipynb
@@ -27,7 +27,7 @@
     "# from nbdev.showdoc import *\n",
     "# import openai\n",
     "# from api_secrets import API_KEY\n",
-    "# openai.api_key = \"your_key_here\""
+    "# openai.api_key = API_KEY"
    ]
   },
   {
@@ -39,8 +39,8 @@
     "#| export\n",
     "from nbdev.showdoc import *\n",
     "import openai\n",
-    "# from api_secrets import API_KEY\n",
-    "openai.api_key = \"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\""
+    "from api_secrets import API_KEY\n",
+    "openai.api_key = API_KEY"
    ]
   },
   {
