fix markdown headings champaign prompt

--- a/nbs/00_examples.ipynb
+++ b/nbs/00_examples.ipynb
@@ -24,18 +24,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from nbdev.showdoc import *\n",
-    "# import openai\n",
-    "# from api_secrets import API_KEY\n",
-    "# openai.api_key = API_KEY"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from nbdev.showdoc import *\n",
     "import openai\n",
     "from api_secrets import API_KEY\n",
@@ -112,6 +100,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Wine Shop Prompt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -167,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now lets try a prompt"
+    "#### Champaign Promt"
    ]
   },
   {
