fix markdown headings Add function title

--- a/nbs/00_examples.ipynb
+++ b/nbs/00_examples.ipynb
@@ -147,6 +147,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ask GPT3 Function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -162,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Champaign Promt"
+    "### Test Funciton with Champaign Prompt"
    ]
   },
   {
