Use Environment Variables in place of your API key

--- a/nbs/00_examples.ipynb
+++ b/nbs/00_examples.ipynb
@@ -25,9 +25,10 @@
    "outputs": [],
    "source": [
     "from nbdev.showdoc import *\n",
+    "import os\n",
     "import openai\n",
-    "from api_secrets import API_KEY\n",
-    "openai.api_key = API_KEY"
+    " \n",
+    "openai.api_key = os.environ[\"OPENAI_API_KEY\"]"
    ]
   },
   {
@@ -69,17 +70,7 @@
     {
      "data": {
       "text/plain": [
-       "'Celebrate life with'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Celebrate life with'"
+       "'A caffeinated haven'"
       ]
      },
      "execution_count": null,
