--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -9,8 +9,9 @@
     "#| hide\n",
     "from gpt3_examples.core import *\n",
     "from nbdev.showdoc import *\n",
+    "import os\n",
     "import openai\n",
-    "openai.api_key = \"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\""
+    "openai.api_key = os.environ[\"OPENAI_API_KEY\"]"
    ]
   },
   {
