--- a/nbs/00_examples.ipynb
+++ b/nbs/00_examples.ipynb
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test Funciton with Champaign Prompt"
+    "### Test Function with Champaign Prompt"
    ]
   },
   {
